# ThreeDimensions-v1.1.1

./: CMakeLists.txt  Manual.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
cpp_core/: bindings.cpp
cpp_core/curves/: BezierCurve.cpp  BezierCurve.h  CurveMeshing.cpp  CurveMeshing.h
cpp_core/geometry/: Primitives.cpp  Primitives.h
cpp_core/math/: Matrix4.h  Vector3.h
cpp_core/mesh/: Mesh.cpp  Mesh.h
cpp_core/modifiers/: BooleanModifier.cpp  BooleanModifier.h  ModifierStack.cpp  ModifierStack.h  Modifiers.cpp  Modifiers.h  SubdivisionModifier.cpp  SubdivisionModifier.h  SymmetryModifier.cpp  SymmetryModifier.h  modifier.h
cpp_core/operations/: Bevel.cpp  Bevel.h  EdgeLoop.cpp  EdgeLoop.h  Extrude.cpp  Extrude.h  FaceSplit.cpp  FaceSplit.h  Subdivision.cpp  Subdivision.h
cpp_core/sculpt/: SculptTools.cpp  SculptTools.h
cpp_core/topology/: Edge.h  Face.h  HalfEdge.h  Mesh.cpp  Mesh.h  Topology.cpp  Topology.h  Vertex.h
examples/: baseball_bat.py  bed.py  bookshelf.py  chair.py
python/threedimensions/: __init__.py  core.py  curves.py  exporters.py  mesh.py  modifiers.py  nodes.py  scene.py  sculpt.py  topology.py  viewer.py
python/threedimensions.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
