[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threedimensions"
version = "1.1.1"
description = "Professional Hybrid 3D Modeling Engine (C++ Core + Python API)"
authors = [{name = "LegedsDaD"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]