[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threedimensions"
version = "1.0.0"
description = "Programmable 3D modeling library in pure Python"
authors = [{name = "LegedsDaD"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
viewer = ["glfw>=2.6", "PyOpenGL>=3.1"]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]

where = ["python"]
